# aerosynth-gtav

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  convert.py  download-output.sh  download-samples.sh  setup-env.sh
docs/sample/: calib.json
scripts/: convert.sh
src/: camera.cpp  camera.h  depthcapturer.cpp  depthcapturer.h  fileexporter.cpp  fileexporter.h  framedata.h  main.cpp  screencapturer.cpp  screencapturer.h  script.cpp  script.h
